# OpenDroidAuto

./: README.md  build.gradle  settings.gradle
.github/: FUNDING.yml
.github/workflows/: android.yml  main.yml
aasdk/: build.gradle
aasdk/proto/: AVChannelData.proto  AVChannelMessageIdsEnum.proto  AVChannelSetupRequestMessage.proto  AVChannelSetupResponseMessage.proto  AVChannelSetupStatusEnum.proto  AVChannelStartIndicationMessage.proto  AVChannelStopIndicationMessage.proto  AVInputChannelData.proto  AVInputOpenRequestMessage.proto  AVInputOpenResponseMessage.proto  AVMediaAckIndicationMessage.proto  AVStreamTypeEnum.proto  AbsoluteInputEventData.proto  AbsoluteInputEventsData.proto  AccelData.proto  AudioConfigData.proto  AudioFocusRequestMessage.proto  AudioFocusResponseMessage.proto  AudioFocusStateEnum.proto  AudioFocusTypeEnum.proto  AudioTypeEnum.proto  AuthCompleteIndicationMessage.proto  BindingRequestMessage.proto  BindingResponseMessage.proto  BluetoothChannelData.proto  BluetoothChannelMessageIdsEnum.proto  BluetoothPairingMethodEnum.proto  BluetoothPairingRequestMessage.proto  BluetoothPairingResponseMessage.proto  BluetoothPairingStatusEnum.proto  ButtonCodeEnum.proto  ButtonEventData.proto  ButtonEventsData.proto  CMakeLists.txt  ChannelDescriptorData.proto  ChannelOpenRequestMessage.proto  ChannelOpenResponseMessage.proto  CompassData.proto  ControlMessageIdsEnum.proto  DiagnosticsData.proto  (+72 more)
app/: build.gradle  proguard-rules.pro
common/: build.gradle
gradle/: libs.versions.toml
omxvideocodec/: build.gradle
slesaudiocodec/: build.gradle
(+639 files in other folders)
